Set theme jekyll-theme-merlot

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-merlot
 markdown: kramdown
 theme: jekyll-theme-basically-basic
 logo: /assets/icons/basically-basic-logo-light.svg
