--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-merlot
 markdown: kramdown
-theme: Merlot
-logo: https://github.com/tiagoburiol/NUMETHODS/raw/master/5_INTERPOLACAO/imagens/erro_na_interpolacao.png
+theme: merlot
+
